<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/this_application_uses_the_following_third_party_libraries"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_retrofit_2"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/retrofit_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_okhttp3"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/okhttp3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_picasso"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/picasso" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_firebase"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/firebase" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_custom_tabs"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/chrome_custom_tabs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_android_x"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/androidx" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_lottie"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/lottie" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_like_button"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/like_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <TextView style="@style/LicenceNErrorTextviewStyle" />

    <TextView
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/animation_credits"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_chris_gannon"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/chris_gannon_lottiefiles" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_rogger_tan"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/rogger_t_n_lottiefiles" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_Hoài_Lê"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/Hoài_Lê_lottiefiles" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_henrique_rossatto"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/henrique_rossatto_lottiefiles" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <TextView style="@style/LicenceNErrorTextviewStyle" />

    <TextView
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/icon_credits"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_freepik"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/freepik_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_round_icons"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/roundicons_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_pixel_buddha"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/pixel_buddha_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_pong"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/mynamepong_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_icon_pond"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/icon_pond_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_icon_eucalyp"
        style="@style/LicenceNErrorTextviewStyle"
        android:text="@string/eucalyp_from_www_flaticon_com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_powered_by"
        style="@style/LicenceNErrorTextviewStyle"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/powered_by_newsapi_org"
        android:textColor="@color/color_news_title_and_clickable" />
</LinearLayout>